--- a/src/main/java/view/TestatErstellenAufgabenPreview.form
+++ b/src/main/java/view/TestatErstellenAufgabenPreview.form
@@ -30,7 +30,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="1de1" class="javax.swing.JButton" binding="btnZurueckButton">
+      <component id="1de1" class="javax.swing.JButton" binding="btnZurueck">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -144,7 +144,7 @@
           <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <grid id="9d7df" binding="mcPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="9d7df" binding="pnlMultipleChoice" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
