--- a/src/main/java/view/aufgabenBearbeiten/aufgabenSammlungenBearbeiten/BearbeiteProgrammieraufgabeView.form
+++ b/src/main/java/view/aufgabenBearbeiten/aufgabenSammlungenBearbeiten/BearbeiteProgrammieraufgabeView.form
@@ -182,7 +182,7 @@
                       <text value="Loesungshinweis"/>
                     </properties>
                   </component>
-                  <component id="30344" class="javax.swing.JButton" binding="btnVoherigeAufgabe">
+                  <component id="30344" class="javax.swing.JButton" binding="btnVorherigeAufgabe">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
