--- a/src/main/java/view/loesungen/bewertungenTestat/BewertungEinfachantwortView.form
+++ b/src/main/java/view/loesungen/bewertungenTestat/BewertungEinfachantwortView.form
@@ -23,7 +23,7 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="9e27e" class="javax.swing.JTextArea" binding="txtaUserLoesung">
+      <component id="9e27e" class="javax.swing.JTextArea" binding="txtaUserloesung">
         <constraints>
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="150"/>
@@ -118,7 +118,7 @@
           <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <grid id="d3314" binding="panelBearbeitungszeit" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d3314" binding="pnlBearbeitungszeit" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -144,7 +144,7 @@
           </component>
         </children>
       </grid>
-      <grid id="12b6c" binding="panelPunktzahl" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="12b6c" binding="pnlPunktzahl" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -201,7 +201,7 @@
           <text value="Aufgabenstellungsbild:"/>
         </properties>
       </component>
-      <component id="8603e" class="javax.swing.JLabel" binding="lblUserBild">
+      <component id="8603e" class="javax.swing.JLabel" binding="lblUserloesung">
         <constraints>
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -209,7 +209,7 @@
           <text value="Userlösung:"/>
         </properties>
       </component>
-      <component id="4306a" class="javax.swing.JLabel" binding="lblMusterBild">
+      <component id="4306a" class="javax.swing.JLabel" binding="lblMusterloesung">
         <constraints>
           <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
