--- a/src/main/java/view/loesungen/bewertungenTestat/BewertungMultipleChoiceAufgabeView.form
+++ b/src/main/java/view/loesungen/bewertungenTestat/BewertungMultipleChoiceAufgabeView.form
@@ -38,7 +38,7 @@
           <grid row="5" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <grid id="6db50" binding="panelUserChoices" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="6db50" binding="pnlUserChoices" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -84,7 +84,7 @@
           </component>
         </children>
       </grid>
-      <grid id="9d0d1" binding="panelMusterChoices" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="9d0d1" binding="pnlMusterChoices" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -189,7 +189,7 @@
           <text value=""/>
         </properties>
       </component>
-      <grid id="ea4e3" binding="panelBearbeitungszeit" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="ea4e3" binding="pnlBearbeitungszeit" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -215,7 +215,7 @@
           </component>
         </children>
       </grid>
-      <grid id="fc2db" binding="panelPunktzahl" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="fc2db" binding="pnlPunktzahl" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -264,7 +264,7 @@
           </component>
         </children>
       </grid>
-      <component id="dc577" class="javax.swing.JLabel" binding="lblMusterBild">
+      <component id="dc577" class="javax.swing.JLabel" binding="lblMusterloesung">
         <constraints>
           <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -272,7 +272,7 @@
           <text value="Musterlösung:"/>
         </properties>
       </component>
-      <component id="3c4b3" class="javax.swing.JLabel" binding="lblUserBild">
+      <component id="3c4b3" class="javax.swing.JLabel" binding="lblUserloesung">
         <constraints>
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
