--- a/src/main/java/view/loesungen/loesungenEinzelaufgaben/LoesungEinzelneDesignaufgabeView.form
+++ b/src/main/java/view/loesungen/loesungenEinzelaufgaben/LoesungEinzelneDesignaufgabeView.form
@@ -34,7 +34,7 @@
           <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="15c90" class="javax.swing.JLabel" binding="lblPlaceholderUserloesung">
+      <component id="15c90" class="javax.swing.JLabel" binding="lblUserloesung">
         <constraints>
           <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -47,7 +47,7 @@
           <grid row="4" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="23adf" class="javax.swing.JLabel" binding="lblPlaceholderMusterloesung">
+      <component id="23adf" class="javax.swing.JLabel" binding="lblMusterloesung">
         <constraints>
           <grid row="4" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -92,7 +92,7 @@
           <text value=""/>
         </properties>
       </component>
-      <grid id="13e4f" binding="panelBearbeitungszeit" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="13e4f" binding="pnlBearbeitungszeit" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -118,7 +118,7 @@
           </component>
         </children>
       </grid>
-      <grid id="bb370" binding="panelPunktzahl" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="bb370" binding="pnlPunktzahl" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false">
