--- a/src/main/java/view/loesungen/loesungenEinzelaufgaben/LoesungEinzelneEinfachantwortaufgabeView.form
+++ b/src/main/java/view/loesungen/loesungenEinzelaufgaben/LoesungEinzelneEinfachantwortaufgabeView.form
@@ -78,7 +78,7 @@
           <text value=""/>
         </properties>
       </component>
-      <grid id="26bad" binding="panelBearbeitungszeit" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="26bad" binding="pnlBearbeitungszeit" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -104,7 +104,7 @@
           </component>
         </children>
       </grid>
-      <grid id="624bd" binding="panelPunktzahl" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="624bd" binding="pnlPunktzahl" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -168,7 +168,7 @@
           <editable value="false"/>
         </properties>
       </component>
-      <component id="ac759" class="javax.swing.JTextArea" binding="txtaUserLoesung">
+      <component id="ac759" class="javax.swing.JTextArea" binding="txtaUserloesung">
         <constraints>
           <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="150"/>
